--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 body {
     background: #252425;
 }
+
 #gameboard {
     margin: 0 auto;
     top: 100px;
@@ -42,7 +43,7 @@ body {
     font-family: 'Pixel-Art';
     color: red;
     text-shadow: 0 0 0.3em;
-    position:absolute;
+    position: absolute;
     left: 30px;
     animation: menosVida 600ms linear infinite;
 }
@@ -53,7 +54,7 @@ body {
     font-family: 'Pixel-Art';
     color: rgb(23, 228, 84);
     text-shadow: 0 0 0.3em;
-    position:absolute;
+    position: absolute;
     left: 30px;
     bottom: 180px;
     animation: maisVida 600ms linear infinite;
@@ -67,7 +68,7 @@ body {
     bottom: 0px;
 
     position: absolute;
-    
+
     opacity: 50%;
     margin: 0;
     background: #ff2744;
@@ -81,7 +82,7 @@ body {
     bottom: 0px;
 
     position: absolute;
-    
+
     opacity: 50%;
     margin: 0;
     background: #ff2744;
@@ -90,7 +91,7 @@ body {
 }
 
 .mensagemFinal {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     text-align: center;
     position: absolute;
     background: rgb(40, 160, 10);
@@ -103,22 +104,27 @@ body {
     transform: translate(-50%, 50%);
     animation: surgirTexto 7s forwards;
 }
+
 .mensagemFinal h1 {
     color: #f80593;
     animation: piscar 800ms linear infinite;
 }
+
 @keyframes piscar {
     0% {
         opacity: 100%;
     }
+
     50% {
         opacity: 0;
     }
+
     100% {
         opacity: 100%;
     }
 
 }
+
 .mensagemFinal h3 {
     margin-top: 10px;
 }
@@ -131,10 +137,10 @@ body {
     bottom: 0px;
 
     position: absolute;
-    
+
     opacity: 50%;
     margin: 0;
-    
+
     background: linear-gradient(90deg, #fb0094, #0000ff, #00ff00, #ffff00, #fb0094, #0000ff, #00ff00, #ffff00, #fb0094);
     background-size: 500%;
 
@@ -151,21 +157,23 @@ body {
 
 .mario-inicio {
     width: 120px;
-    bottom:140px;
+    bottom: 140px;
     right: 300px;
-    position:relative;
+    position: relative;
 }
+
 .bolsolula {
     width: 420px;
     position: relative;
     left: 340px;
     bottom: 230px;
-    
+
 }
+
 .pipe-inicio {
     position: relative;
     width: 120px;
-    bottom:230px;
+    bottom: 230px;
     right: 213px;
     animation: pipe-inicio 3s infinite linear;
 }
@@ -179,14 +187,15 @@ body {
 
 .mario {
     width: 150px;
-    position:absolute;
+    position: absolute;
     left: 0px;
     bottom: 0px;
 }
+
 .ferido {
     filter: blur(5px) saturate(3);
     width: 140px;
-    position:absolute;
+    position: absolute;
     left: 0px;
     bottom: 0px;
     animation: ferido 600ms infinite linear;
@@ -204,7 +213,7 @@ body {
 .pipe {
     height: 180px;
     right: -220px;
-    position:absolute;
+    position: absolute;
     bottom: 0;
     width: 180px;
 }
@@ -231,7 +240,7 @@ body {
     position: absolute;
     bottom: 180px;
     width: 80px;
-    animation: vida-animation 20s infinite linear; 
+    animation: vida-animation 20s infinite linear;
 }
 
 .invulneravel {
@@ -240,28 +249,35 @@ body {
     align-items: center;
     position: absolute;
     z-index: 99;
-    
+
 }
+
 .invulneravel .bar {
     background-color: rgb(94, 255, 94);
     width: 500px;
     height: 20px;
     box-shadow: 1px 1px 10px;
-    
+
 }
 
 .pontuacao {
     display: flex;
     flex-direction: column;
     align-items: end;
-    gap: 5px;
+    gap: 2px;
     margin-left: 1050px;
-    top: 35px;
+    top: 20px;
     z-index: 99;
     position: absolute;
-    font-size: 25px;
+    font-size: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+
 }
+.pontuacao .pontos {
+    font-weight: bold;
+    color: #00ff00;
+}
+
 .reduzir {
     animation: reduzir 10000ms linear;
 }
@@ -278,11 +294,11 @@ body {
 }
 
 .bomb {
-    
+
     position: absolute;
-    bottom: 180px;
+    bottom: 200px;
     width: 150px;
-    animation: bomb-animation 3s infinite linear; 
+    animation: bomb-animation 3s infinite linear;
 }
 
 .explosion {
@@ -295,7 +311,7 @@ body {
 
 /* |||||||||| BOTÕES |||||||||| */
 
-.jogar{
+.jogar {
     font-size: 25px;
     width: 200px;
     height: 80px;
@@ -305,9 +321,10 @@ body {
     color: aliceblue;
     font-weight: bold;
     transition: 400ms;
-    box-shadow: 1px 1px 20px 1px  black;
+    box-shadow: 1px 1px 20px 1px black;
     cursor: pointer;
 }
+
 .jogar:hover {
     background: #ff7777;
 }
@@ -322,11 +339,11 @@ body {
     color: aliceblue;
     font-weight: bold;
     transition: 400ms;
-    box-shadow: 1px 1px 20px 1px  black;
+    box-shadow: 1px 1px 20px 1px black;
     cursor: pointer;
     position: absolute;
     right: 41%;
-    bottom: 100px; 
+    bottom: 100px;
 }
 
 .reiniciar:hover {
@@ -339,6 +356,7 @@ body {
 .vida {
     margin-top: 30px;
 }
+
 .borda {
     position: absolute;
     background-image: url(images/bordaVida.png);
@@ -365,12 +383,13 @@ body {
     background-size: 500%;
     animation: animarLoader 20s linear infinite;
 }
+
 .loaderColor {
     content: '';
     width: 400px;
     height: 52px;
     position: absolute;
-    
+
     background: yellowgreen;
     background-size: 500%;
 
@@ -381,7 +400,7 @@ body {
 
 
 .morto {
-    
+
     color: #ff0000;
     font-family: 'arial';
     font-weight: bolder;
@@ -390,12 +409,12 @@ body {
     position: absolute;
     width: 500px;
     height: 30px;
-    
+
     -webkit-box-reflect: below 0px linear-gradient(transparent, #000500);
 }
 
 .morto::before {
-    
+
     color: red;
     font-family: 'arial';
     font-weight: bolder;
@@ -403,11 +422,11 @@ body {
     align-items: left;
     position: absolute;
     width: 500px;
-    height: 30px; 
+    height: 30px;
 }
 
 .morto::after {
-    
+
     color: red;
     font-family: 'arial';
     font-weight: bolder;
@@ -456,6 +475,7 @@ body {
     from {
         right: -550px;
     }
+
     to {
         right: 100%;
     }
@@ -601,6 +621,7 @@ body {
     from {
         right: -5550px;
     }
+
     to {
         right: 100%;
     }
@@ -610,6 +631,7 @@ body {
     from {
         right: -320px;
     }
+
     to {
         right: 100%;
     }
@@ -675,6 +697,7 @@ body {
     from {
         width: 400px;
     }
+
     to {
         width: 0px;
     }
@@ -684,13 +707,14 @@ body {
     from {
         opacity: 100%;
     }
+
     to {
         opacity: 0%;
     }
 }
 
 @keyframes explosion-animation {
-  
+
     0% {
         opacity: 0%;
     }
@@ -716,12 +740,15 @@ body {
     0% {
         opacity: 0%;
     }
+
     30% {
         opacity: 80%;
     }
-    70%{
+
+    70% {
         opacity: 80%;
     }
+
     100% {
         opacity: 0%;
     }
