--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ body {
     flex-direction: column;
     align-items: end;
     gap: 2px;
-    margin-left: 1050px;
+    margin-left: 980px;
     top: 20px;
     z-index: 99;
     position: absolute;
@@ -276,6 +276,31 @@ body {
 .pontuacao .pontos {
     font-weight: bold;
     color: #00ff00;
+}
+
+.resultado {
+    position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 55px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-style: italic;
+    font-weight: bold;
+    z-index: 99;
+    text-align: center;
+
+    width: 700px;
+    text-shadow: 1px 1px 5px;
+}
+.resultado .pts {
+    
+}
+.resultado .rank {
+     
+    font-size: 65px;
+    text-shadow: 1px 1px 10px black;
+    
 }
 
 .reduzir {
