--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
 .menosVida {
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Pixel-Art';
+    font-family: 'Pixelify Sans';
     color: red;
     text-shadow: 0 0 0.3em;
     position: absolute;
@@ -51,7 +51,7 @@ body {
 .maisVida {
     font-size: 50px;
     font-weight: bold;
-    font-family: 'Pixel-Art';
+    font-family: 'Pixelify Sans';
     color: rgb(23, 228, 84);
     text-shadow: 0 0 0.3em;
     position: absolute;
@@ -150,9 +150,9 @@ body {
 }
 
 .titulo {
-    font-family: 'Pixel-Art';
-    font-weight: lighter;
-    margin-top: 20px;
+    font-family: 'Pixelify Sans';
+    font-size: 2.5rem;
+    
 }
 
 .mario-inicio {
